<resources>
    <string name="app_name">RAF Dnevnjak</string>
    <string name="username_input">Username</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="login_button">Login</string>
    <string name="email_empty_alert">Email can\'t be empty!</string>
    <string name="email_invalid_alert">Please type in a valid email.</string>
    <string name="username_empty_alert">Username can\'t be empty!</string>
    <string name="password_empty_alert">Password can\'t be empty!</string>
    <string name="password_short_alert">Password must be at least 5 characters long!</string>
    <string name="password_lowercase_alert">Password must contain at least one upper case letter!</string>
    <string name="password_no_num_alert">Password must contain at least one number!</string>
    <string name="password_forbidden_symbols_alert">Password must not contain any of the "~#^|$%&amp;*!" symbols!</string>
    <string name="no_such_user_alert">No user with provided credentials exists.</string>
    <string name="app_user_internal_error">Internal error occurred while reading users :(</string>
    <string name="profile">Profile</string>
    <string name="show_past_obligations_button">Show past obligations</string>
    <string name="low_importance">Low</string>
    <string name="mid_importance">Mid</string>
    <string name="high_importance">High</string>
    <string name="create_button">Create</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_text_input">Title</string>
    <string name="time_text_input">Time</string>
    <string name="description_text_input">Description</string>
    <string name="choose_start_time">Choose start time</string>
    <string name="choose_end_time">Choose end time</string>
    <string name="time_not_selected_alert">Both start and end time must be selected!</string>
    <string name="obligation_text_empty_alert">Obligation title mustn\'t be empty</string>
    <string name="bad_time_selection_alert">Start time must be before end time!</string>
    <string name="obligation_time_overlap">There are existing obligations at the provided time!</string>
    <string name="log_out">Log out</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="new_password_confirm">Confirm new password</string>
    <string name="submit">Submit</string>
    <string name="new_password_confirm_alert">The confirmation of the new password is different from the new password!</string>
    <string name="new_password_same_as_old_alert">New password must be different from the old one!</string>
    <string name="password_changed_success">Password successfully updated.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
</resources>