<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/obligationLevel"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabTextColor="#808080"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/lowTab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/midTab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/highTab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </com.google.android.material.tabs.TabLayout>


    <EditText
        android:id="@+id/obligationTitleText"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/title_text_input"
        app:layout_constraintTop_toBottomOf="@+id/obligationLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="114dp" />

    <TextView
        android:id="@+id/start_time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        android:text="@string/choose_start_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obligationTitleText" />

    <TextView
        android:id="@+id/end_time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:text="@string/choose_end_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/start_time_textview"
        app:layout_constraintTop_toBottomOf="@+id/obligationTitleText"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/obligationDescriptionText"
        android:layout_width="340dp"
        android:layout_height="350dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_text_input"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_time_textview" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/create_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>